apps/hello-world/k8s/base/deployment.yaml
# Copyright 2023 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
  labels:
    commit-short-sha: "NA"        # from-param: ${commit-short-sha}
    gcb-build-id: "NA"            # from-param: ${gcb-build-id}
spec:
  selector:
    matchLabels:
      app: hello-world
  replicas: 3                     # from-param: ${deploy_replicas}
  template:
    metadata:
      labels:
        app: hello-world
        commit-short-sha: "NA"    # from-param: ${commit-short-sha}
        gcb-build-id: "NA"        # from-param: ${gcb-build-id}
    spec:
      containers:
        - name: hello-world
          image: hello-world
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 3
          # env:
          #  - name: NAME
          #    value: "YOU"
